fix: Correct text-wrap

--- a/index.css
+++ b/index.css
@@ -166,7 +166,6 @@ img {
         font-weight: 400;
         line-height: 1.6;
         color: var(--text-30);
-        text-wrap: pretty;
       }
     }
   }
